--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,15 @@ spring.jpa.hibernate.ddl-auto= update
 spring.sql.init.mode=always
 spring.datasource.driverClassName=org.postgresql.Driver
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost/gestione_viaggi
+spring.datasource.username=postgres
+spring.datasource.password=00000000
 
-cloudinary.cloud_name=${CL_NAME}
-cloudinary.api_key=${CL_KEY}
-cloudinary.api_secret=${CL_SECRET}
+jwt.secret=G7dLkPzS3LmHqT9UwXyIbV28nHjPeR5ZGTRU77891Yht
+# Durata del token in millisecondi 1 h
+jwt.expiration=3600000
+
+
+cloudinary.cloud_name=drfdsipgb
+cloudinary.api_key=455226771167337
+cloudinary.api_secret=v4bPTTTWFYT_0oEvYmosLPQVinw
